--- a/IMIP.ipynb
+++ b/IMIP.ipynb
@@ -151,17 +151,22 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
-        "data =np.array([['Yasmin Oliveira', 'Estagiária de Engenharia', 'TecSaude', 'Engenharia Biomédica', 2022],\n",
-        "                   ['Camila Cristina', 'Estagiária de Engenharia', 'TecSaude', 'Engenharia Elétrica', 2021],\n",
+        "data =np.array([['Yasmin Oliveira', 'Estagiário', 'TecSaude', 'Engenharia Biomédica', 2022],\n",
+        "                   ['Camila Cristina', 'Estagiário', 'TecSaude', 'Engenharia Elétrica', 2021],\n",
         "                   ['Liliane Martins', 'Aux de Engenharia', 'IMIP', 'Engenharia Eletrônica', 2020],\n",
         "                   ['Bruna Oliveira', 'Aux de Engenharia', 'IMIP', 'Engenharia Eletrônica', 2019],\n",
-        "                   ['Kellyane Karol', 'Supervisora de Engenharia', 'IMIP', 'Engenharia Elétrica', 2018],\n",
+        "                   ['Kellyane Karol', 'Supervisor', 'IMIP', 'Engenharia Elétrica', 2018],\n",
         "                   ['Melina Carla', 'Aux Admnistrativo', 'IMIP', 'Contabilidade', 2018],\n",
-        "                   ['Leonardo', 'Técnico de Eletrônica', 'TecSaude', 'Técnico em Eletrotécnica', 2021],\n",
-        "                   ['Gabriel Maior', 'Estagiário Técnico', 'TecSaude', 'Técnico em Eletrônica', 2022]])\n",
+        "                   ['Leonardo', 'Técnico', 'TecSaude', 'Técnico em Eletrotécnica', 2021],\n",
+        "                   ['Gabriel Maior', 'Estagiário', 'TecSaude', 'Técnico em Eletrônica', 2022],\n",
+        "                   ['Ailson', 'Técnico', 'IMIP', 'Técnico em Eletrotécnica', 2018],\n",
+        "                   ['Thiago', 'Técnico', 'IMIP', 'Técnico em Eletrotécnica', 2017],\n",
+        "                   ['Gabriel', 'Estagiário', 'TecSaude', 'Técnico em Eletrônica', 2021], \n",
+        "                   ['Marcilio', 'Técnico', 'IMIP', 'Técnico em Eletrotécnica', 2014],\n",
+        "                   ['Danilo', 'Técnico', 'IMIP', 'Técnico em Eletrotécnica', 2016]])\n",
         "\n",
-        "data = pd.DataFrame(data, index = range(1, 9), columns=['Nome', 'Cargo', 'Empresa', 'Graduação', 'Ano'])\n",
-        "data.head(9)"
+        "data = pd.DataFrame(data, index = range(1, 14), columns=['Nome', 'Cargo', 'Empresa', 'Graduação', 'Ano'])\n",
+        "data.head(14)"
       ]
     },
     {
